; ModuleID = '/home/carl/AnghaBench/libui/unix/extr_colorbutton.c_uiColorButtonColor.c'
source_filename = "/home/carl/AnghaBench/libui/unix/extr_colorbutton.c_uiColorButtonColor.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }
%struct.TYPE_6__ = type { double, double, double, double }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @uiColorButtonColor(%struct.TYPE_5__* %0, double* %1, double* %2, double* %3, double* %4) #0 {
  %6 = alloca %struct.TYPE_5__*, align 8
  %7 = alloca double*, align 8
  %8 = alloca double*, align 8
  %9 = alloca double*, align 8
  %10 = alloca double*, align 8
  %11 = alloca %struct.TYPE_6__, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %6, align 8
  store double* %1, double** %7, align 8
  store double* %2, double** %8, align 8
  store double* %3, double** %9, align 8
  store double* %4, double** %10, align 8
  %12 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %13 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @gtk_color_chooser_get_rgba(i32 %14, %struct.TYPE_6__* %11)
  %16 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %11, i32 0, i32 0
  %17 = load double, double* %16, align 8
  %18 = load double*, double** %7, align 8
  store double %17, double* %18, align 8
  %19 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %11, i32 0, i32 1
  %20 = load double, double* %19, align 8
  %21 = load double*, double** %8, align 8
  store double %20, double* %21, align 8
  %22 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %11, i32 0, i32 2
  %23 = load double, double* %22, align 8
  %24 = load double*, double** %9, align 8
  store double %23, double* %24, align 8
  %25 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %11, i32 0, i32 3
  %26 = load double, double* %25, align 8
  %27 = load double*, double** %10, align 8
  store double %26, double* %27, align 8
  ret void
}

declare dso_local i32 @gtk_color_chooser_get_rgba(i32, %struct.TYPE_6__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
